--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#db.driver.driver=org.postgresql.Drive
+#db.driver.url=${JBDC_DATABASE_URL}
+#db.driver.username=${JDBC_DATABASE_USERNAME}
+#db.driver.password=${JDBC_DATABASE_PASSWORD}
